Support basic Postgres catalog.